# AgileMate

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  bot_data.json  cargo.toml  deploy-command.ts  eslint.config.ts  fly.toml  index.ts  package.json
commands/utility/: standup.ts  vote.ts
convex/: schema.ts  standupFunctions.ts
convex/_generated/: api.d.ts
src/: main.rs
