[package]
name = "agileMate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agileMate"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.29", features = ["full"] }
poise = "0.5.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"